# ur_servo

./: CMakeLists.txt  README.md  package.xml
config/: ur_simulated_config.yaml
launch/: bag_record.launch  camera.launch  control_ur.launch  multimaster.launch  robot.launch  servo.launch  servoing_force_ur.launch
src/: move_trajectory.cpp  servoing_force_ur.cpp  teleop_twist_keyboard.py  ur_control_mbzirc.cpp
startups/OS0_32_ur_tracking_lidar_frame/: UR_bagger.sh  session.yml
startups/OS0_32_ur_tracking_lidar_frame/custom_config/: uav_pcl_detection.yaml
startups/OS1_128_outdoor_vectornav/: session.yml
startups/OS1_128_outdoor_vectornav/custom_config/: .display_bag.rviz
startups/OS1_128_ur_tracking_indoor/: session.yml
startups/OS1_128_ur_tracking_indoor/custom_config/: robotic_arm_transform.yaml
startups/OS1_128_ur_tracking_indoor_vectornav/custom_config/: uav_pcl_detection.yaml
startups/no_robotic_arm/OS0_32_indoor/: session.yml
startups/no_robotic_arm/OS1_128_Rev_C_indoor/: session.yml
startups/no_robotic_arm/OS1_128_Rev_C_indoor/custom_config/: uav_pcl_detection.yaml
startups/no_robotic_arm/OS1_128_Rev_C_outdoor/: lidar_bagger.sh  light_bagger.sh  session.yml
startups/no_robotic_arm/OS1_128_Rev_C_outdoor/custom_config/: uav_pcl_detection.yaml
startups/torpedo_outdoor_vectornav/: .start.sh.swp  session.yml
startups/torpedo_outdoor_vectornav/custom_config/: robotic_arm_transform.yaml  uav_pcl_detection.yaml
