<?xml version="1.0"?>
<package>
  <name>servoing_force_ur</name>
  <version>0.0.0</version>
  <description>Localization based on the magnetic field strength</description>

  <author email="goran.vasiljevic@fer.hr">Goran Vasiljevic</author>

  <maintainer email="goran.vasiljevic@fer.hr">Goran Vasiljevic</maintainer>

  <license>BSD</license>

 <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>spacenav_node</run_depend>
  <run_depend>joy_teleop</run_depend>  

</package>
